# kinship-vis

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml  workflows.yml
src/kinship_vis/: cli.py  io.py  viz.py
tests/: test_io.py  test_smoke.py
