[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "kinship-vis"
version = "0.1.1"
description = "Kinship graph visualizer for PLINK .genome and KING .kin0 with PNG/TIFF and interactive HTML outputs"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Aleksei Zarubin", email = "REPLACE_WITH_YOUR_EMAIL"}]
keywords = ["genomics", "kinship", "IBD", "visualization", "population genetics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Operating System :: OS Independent",
]
dependencies = [
  "pandas>=1.5",
  "numpy>=1.23,<2",
  "networkx>=3.0",
  "matplotlib>=3.5",
  "plotly>=5,<6",
]

[project.urls]
Homepage = "https://github.com/YOUR_GITHUB_USERNAME/kinship-vis"
Issues = "https://github.com/YOUR_GITHUB_USERNAME/kinship-vis/issues"
Repository = "https://github.com/YOUR_GITHUB_USERNAME/kinship-vis"

[project.scripts]
kinship-vis = "kinship_vis.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kinship_vis"]

[tool.hatch.build.targets.sdist]
include = [
  "src/kinship_vis",
  "README.md",
  "LICENSE",
  "examples",
  "tests",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
